# inventory_item_belief_updater

./: CMakeLists.txt  package.xml
launch/: box_belief_updater.launch
src/include/: inventory_item_belief_updater.h
src/source/: inventory_item_belief_updater.cpp  inventory_item_belief_updater_main.cpp
